WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306487
[Site Isolation] Snaphotting via Save as Image doesn't capture cross origin iframe
https://bugs.webkit.org/show_bug.cgi?id=306487
Summary
[Site Isolation] Snaphotting via Save as Image doesn't capture cross origin i...
Nikos Mouchtaris
Reported
2026-01-28 16:47:10 PST
[Site Isolation] Snaphotting via Save as Image doesn't capture cross origin iframe
Attachments
Add attachment
proposed patch, testcase, etc.
Nikos Mouchtaris
Comment 1
2026-01-28 17:08:03 PST
<
rdar://problem/169035767
>
Nikos Mouchtaris
Comment 2
2026-01-28 17:12:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57445
EWS
Comment 3
2026-02-12 10:55:19 PST
Committed
307380@main
(624cb5c0ac68): <
https://commits.webkit.org/307380@main
> Reviewed commits have been landed. Closing PR #57445 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug