[Site Isolation] Snaphotting via Save as Image doesn't capture cross origin iframe https://bugs.webkit.org/show_bug.cgi?id=306487 rdar://169035767

Reviewed by Matt Woodrow.

Update WebPageProxy::takeSnapshot codepath to use new remote snapshotting flow. This
will need a follow up to get HDR working with the new flow.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::takeSnapshot):
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::takeRemoteSnapshot):
(WebKit::WebPage::preSnapshotSetup):
(WebKit::WebPage::postSnapshotTakedown):
(WebKit::WebPage::takeSnapshot):
(WebKit::WebPage::drawToSnapshot):
* Source/WebKit/WebProcess/WebPage/WebPage.h:
* Source/WebKit/WebProcess/WebPage/WebPage.messages.in:

Canonical link: https://commits.webkit.org/307380@main